Fix overflow

--- a/src/SelectableAccordion/Item/Item.st.css
+++ b/src/SelectableAccordion/Item/Item.st.css
@@ -38,12 +38,14 @@
 }
 
 .content {
-  overflow: hidden;
-
   grid-column-start: 2;
   grid-column-end: 2;
 }
 
+.text {
+  overflow: hidden;
+}
+
 .inner {
-  padding-bottom: 24px;
+  padding: 0 30px 24px 0;
 }
